feat: add support for adding and modifying basic item entries